# Bricks

./: CMakeLists.txt  LICENSE  PackagesList.cmake  README.md  TPLsList.cmake  Version.cmake
cmake/: Bricks_config.hpp.in
src/: Bricks_AbstractBuildableObject.hpp  Bricks_AbstractBuildableObject_impl.hpp  Bricks_AbstractBuilder.hpp  Bricks_AbstractBuilder_impl.hpp  Bricks_AbstractIterator.hpp  Bricks_AbstractIterator_impl.hpp  Bricks_AbstractObjectRegistry.hpp  Bricks_AbstractObjectRegistry_impl.hpp  Bricks_AbstractSerializableObject.hpp  Bricks_AbstractSerializableObject_impl.hpp  Bricks_AbstractSerializer.hpp  Bricks_AbstractSerializer_impl.hpp  Bricks_CommIndexer.cpp  Bricks_CommIndexer.hpp  Bricks_CommTools.cpp  Bricks_CommTools.hpp  Bricks_DBC.cpp  Bricks_DBC.hpp  Bricks_DataSerializer.hpp  Bricks_PredicateComposition.hpp  Bricks_PredicateComposition_impl.hpp  CMakeLists.txt
test/: CMakeLists.txt  tstAbstractBuilder.cpp  tstAbstractIterator.cpp  tstAbstractSerializer.cpp  tstAssertion.cpp  tstCommIndexer.cpp  tstCommTools.cpp  tstDataSerializer.cpp  tstPredicateComposition.cpp
